--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <title>Odin Rock Paper Scissors</title>
 </head>
 <body>
+    <div id="results"></div>
+    <button id="rockButton">Rock</button>
+    <button id="paperButton">Paper</button>
+    <button id="scissorsButton">Scissors</button>
     <script src="javascript.js"></script>
 </body>
 </html>
