Game ends and can be restarted

--- a/index.html
+++ b/index.html
@@ -6,10 +6,13 @@
     <title>Odin Rock Paper Scissors</title>
 </head>
 <body>
-    <div id="results"></div>
-    <button id="rockButton">Rock</button>
-    <button id="paperButton">Paper</button>
-    <button id="scissorsButton">Scissors</button>
+    <div id="results">Rock Paper Scissors</div>
+    <button id="start">Play</button>
+    <div id="choices" style="display: none;">
+        <button id="rockButton">Rock</button>
+        <button id="paperButton">Paper</button>
+        <button id="scissorsButton">Scissors</button>
+    </div>
     <script src="javascript.js"></script>
 </body>
 </html>
