Game displays additional info

--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <title>Odin Rock Paper Scissors</title>
 </head>
 <body>
+    <div id="outcome"></div>
     <div id="results">Rock Paper Scissors</div>
+    <div id="info">Press button to start the game</div>
     <button id="start">Play</button>
     <div id="choices" style="display: none;">
         <button id="rockButton">Rock</button>
